# Body-Scan-App

./: .gitignore  CROSS_PLATFORM_GUIDE.md  IMAGE_CAPTURE_IMPLEMENTATION_SUMMARY.md  IMAGE_CAPTURE_SCREEN_SPEC.md  IMAGE_CAPTURE_TESTING_GUIDE.md  MANUAL_TESTING_CHECKLIST.md  MEASUREMENT_CALIBRATION_UPDATE_PROMPT.md  MEDIAPIPE_INTEGRATION_PLAN.md  MOCK_AUTH_CREDENTIALS.md  Manual_Test_Checklist.md  Mock_Auth_Cred.md  OPENCV_SETUP.md  PHASE_5_COMPLETION_SUMMARY.md  PROJECT_IMPLEMENTATION_GUIDE.md  QUICK_START_IMAGE_CAPTURE.md  README.md  TEST_DOCUMENTATION.md  Technical_Report.md  build.gradle.kts  build_with_env_fix.ps1  download_mediapipe.bat  download_mediapipe.ps1  download_mediapipe.sh  gradle.properties  gradle.properties.mac.template  gradle.properties.shared  gradle.properties.windows.template  gradlew  gradlew_mac.sh  image_capture_guide.md  init.gradle.kts  run_tests.sh  settings.gradle.kts  setup_mac.sh  setup_opencv.ps1  setup_opencv.sh  setup_windows.ps1
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/example/bodyscanapp/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/example/bodyscanapp/integration/: DatabaseIntegrationTest.kt  NativeBridgeIntegrationTest.kt
app/src/androidTest/java/com/example/bodyscanapp/repository/: ScanRepositoryTest.kt
app/src/androidTest/java/com/example/bodyscanapp/ui/: NavigationTest.kt  ScreenInteractionTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: .gitkeep
app/src/main/cpp/include/: image_preprocessor.h  mediapipe_pose_detector.h  mesh_generator.h  multi_view_3d.h  pose_estimator.h
app/src/main/cpp/src/: image_preprocessor.cpp  mediapipe_pose_detector.cpp  mesh_generator.cpp  multi_view_3d.cpp  pose_estimator.cpp
app/src/main/java/com/example/bodyscanapp/: BodyScanApplication.kt  MainActivity.kt
app/src/main/java/com/example/bodyscanapp/data/: AppDatabase.kt  AuthManager.kt  AuthRepository.kt  AuthResult.kt  BiometricAuthManager.kt  BiometricAuthViewModel.kt  DatabaseModule.kt  FirebaseAuthService.kt  HeightData.kt  MeasurementData.kt  README_AUTH.md  TotpService.kt  UserPreferencesRepository.kt
app/src/main/java/com/example/bodyscanapp/data/dao/: ScanDao.kt  UserDao.kt
app/src/main/java/com/example/bodyscanapp/data/entity/: Scan.kt  User.kt
app/src/main/java/com/example/bodyscanapp/navigation/: BodyScanNavigation.kt  NavigationArgs.kt
app/src/main/java/com/example/bodyscanapp/repository/: ScanRepository.kt  UserRepository.kt
app/src/main/java/com/example/bodyscanapp/services/: ToastService.kt
app/src/main/java/com/example/bodyscanapp/ui/components/: ExportDialog.kt  FilamentMeshViewer.kt  FramingOverlay.kt  KeypointOverlay.kt  SaveLocationDialog.kt  WebViewMeshViewer.kt
app/src/main/java/com/example/bodyscanapp/ui/screens/: BiometricAuthScreen.kt  CaptureSequenceScreen.kt  CapturedImagePreviewScreen.kt  HeightInputScreen.kt  HistoryScreen.kt  HomeScreen.kt  ImageCaptureScreen.kt  (+11 more)
app/src/main/java/com/example/bodyscanapp/utils/: DeepLinkHandler.kt  ExportHelper.kt  FileSaveHelper.kt  FirebaseUtils.kt  KeypointProjection.kt  MediaPipePoseHelper.kt  NativeBridge.kt  PerformanceLogger.kt  ShareHelper.kt  ValidationUtils.kt
app/src/main/jni/: CMakeLists.txt  jni_bridge.cpp
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/example/bodyscanapp/: ExampleUnitTest.kt  PerformanceLoggerTest.kt
app/src/test/java/com/example/bodyscanapp/data/: AuthRepositoryTest.kt  TotpServiceTest.kt
app/src/test/java/com/example/bodyscanapp/repository/: ScanRepositoryTest.kt
app/src/test/java/com/example/bodyscanapp/utils/: ExportHelperTest.kt  NativeBridgeTest.kt  ValidationUtilsTest.kt
docs/: Detailed_Technical_Report.md  MEDIAPIPE_INTEGRATION_PLAN.md  README.md  Scan_Process_Flowchart.md  Technical_Report.md
docs/images/: README.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: README.md  setup_opencv.sh
(+6 files in other folders)
